# ChangeLog for net-misc/curl
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.389 2015/02/25 12:16:19 blueness Exp $

*curl-7.41.0 (25 Feb 2015)

  25 Feb 2015; Anthony G. Basile <blueness@gentoo.org> +curl-7.41.0.ebuild:
  Version bump

*curl-7.40.0 (11 Jan 2015)

  11 Jan 2015; Anthony G. Basile <blueness@gentoo.org> +curl-7.40.0.ebuild:
  Version bump

  01 Dec 2014; Agostino Sarubbo <ago@gentoo.org> curl-7.39.0.ebuild:
  Stable for sparc, wrt bug #528840

  20 Nov 2014; Agostino Sarubbo <ago@gentoo.org> curl-7.39.0.ebuild:
  Stable for ia64, wrt bug #528840

  20 Nov 2014; Tobias Klausmann <klausman@gentoo.org> curl-7.39.0.ebuild:
  Stable on alpha, bug 528840

  13 Nov 2014; Anthony G. Basile <blueness@gentoo.org> curl-7.39.0.ebuild:
  Stable on arm, bug #528840

  11 Nov 2014; Jeroen Roovers <jer@gentoo.org> curl-7.39.0.ebuild:
  Stable for HPPA (bug #528840).

  11 Nov 2014; Anthony G. Basile <blueness@gentoo.org> curl-7.39.0.ebuild:
  Stable on ppc and ppc64, bug #528840

  11 Nov 2014; Agostino Sarubbo <ago@gentoo.org> curl-7.39.0.ebuild:
  Stable for x86, wrt bug #528840

  11 Nov 2014; Agostino Sarubbo <ago@gentoo.org> curl-7.39.0.ebuild:
  Stable for amd64, wrt bug #528840

*curl-7.39.0 (11 Nov 2014)

  11 Nov 2014; Anthony G. Basile <blueness@gentoo.org> +curl-7.39.0.ebuild,
  -curl-7.36.0-r1.ebuild, -curl-7.37.0-r1.ebuild, -curl-7.37.0.ebuild,
  -curl-7.38.0.ebuild:
  Remove all older unstable versions that are vuln, and add newest version, bug
  #528840.  Addresses CVE-2014-3707.

  21 Oct 2014; Anthony G. Basile <blueness@gentoo.org> curl-7.37.1.ebuild:
  Stable on ppc and ppc64, bug #522502

  15 Oct 2014; Pacho Ramos <pacho@gentoo.org> curl-7.37.1.ebuild:
  x86 stable, bug #522502

  14 Oct 2014; Pacho Ramos <pacho@gentoo.org> curl-7.37.1.ebuild:
  amd64 stable, bug #522502

  27 Sep 2014; Markus Meier <maekke@gentoo.org> curl-7.37.1.ebuild: