@@ -1,6 +1,10 @@
 # ChangeLog for net-misc/curl
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.389 2015/02/25 12:16:19 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/curl/ChangeLog,v 1.390 2015/02/25 12:24:14 blueness Exp $
+
+  25 Feb 2015; Anthony G. Basile <blueness@gentoo.org> -curl-7.36.0.ebuild,
+  -curl-7.37.1.ebuild:
+  Remove older versions, drop stable m68k, s390 and sh
 
 *curl-7.41.0 (25 Feb 2015)
 
